[FIXED] text overflow in userprofile -> blogsTab in blog content

--- a/frontEnd/src/containers/userProfile/tabs/Blogs.module.css
+++ b/frontEnd/src/containers/userProfile/tabs/Blogs.module.css
@@ -52,7 +52,7 @@
     width: 100px;
 }
 .content{
-    margin-bottom: 10px;
+    overflow-wrap: anywhere;    
 }
 .showcomments{
     margin-top: 30px;
